@@ -1008,6 +1008,29 @@
 					</dependencies>
 					<control type="spinner" format="string"/>
 				</setting>
+				<setting id="general.subtitles.type" type="boolean" label="30419" help="">
+					<level>1</level>
+					<default>true</default>
+					<control type="toggle"/>
+					<dependencies>
+						<dependency type="enable" setting="general.kodi_language">false</dependency>
+					</dependencies>
+				</setting>
+				<setting id="subtitles.types" type="integer" label="30420" help="" parent="general.subtitles.type">
+					<level>1</level>
+					<default>0</default>
+					<constraints>
+						<options>
+							<option label="30421">0</option>
+							<option label="30422">1</option>
+							<option label="30423">2</option>
+						</options>
+					</constraints>
+					<control type="spinner" format="string"/>
+					<dependencies>
+						<dependency type="visible" setting="general.subtitles.type">true</dependency>
+					</dependencies>
+				</setting>
 				<setting id="general.subtitles.keyword" type="boolean" label="30372" help="">
 					<level>1</level>
 					<default>true</default>
